--- a/css/style.css
+++ b/css/style.css
@@ -71,13 +71,14 @@ nav label input {
   margin-top: 50px;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: flex;
   flex-wrap: wrap;
   gap: 50px;
-  height: 100vh;
 }
 
 .card {
+  opacity: 0;
+  transition: 5.5s;
   cursor: pointer;
 }
 
@@ -114,13 +115,13 @@ nav label input {
 }
 
 #aside-movie {
-  opacity: 0;
   position: fixed;
-  right: -0vw;
+  right: 0;
+  transform: translateX(100%);
   background: #161f2e;
   height: 100vh;
-  width: 0px;
   transition: 0.3s;
+  width: 500px;
 }
 
 #aside-movie #close-button {
@@ -129,3 +130,11 @@ nav label input {
   cursor: pointer;
 }
 
+.btn-group {
+}
+
+.page-container {
+  margin: 80px 0 80px 0px;
+  display: flex;
+  justify-content: center;
+}
