--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   background: #19262b;
+  overflow-x: hidden;
 }
 
 .app {
@@ -30,10 +31,11 @@ aside li {
 }
 
 .main {
+  overflow-y: hidden;
   margin-left: 200px;
   position: relative;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   justify-content: center;
   align-items: center;
 }
