--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  background: #19262b;
+  background: #141a1d;
 }
 
 .app {
@@ -11,28 +11,54 @@
   width: 100vw;
 }
 
+#menu-hamburguer {
+  transition: 0.6s;
+  height: 40px;
+  cursor: pointer;
+  margin: 20px;
+}
+
 aside {
+  transition: 0.5s;
+  transform: translateX(-100%);
   display: flex;
   align-items: center;
-  background: #161f2e;
+  justify-content: flex-end;
+  flex-direction: row-reverse;
+  background: #192227;
   position: fixed;
   height: 100vh;
   width: 200px;
   color: #ffff;
 }
 
+aside img {
+  position: absolute;
+  background: none;
+  cursor: pointer;
+  align-self: flex-start;
+  margin-left: 150px;
+}
+
 aside ul {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background: none;
 }
 
 aside li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background: none;
 }
 
 .main {
-  margin-left: 200px;
+  margin-left: 150px;
   position: relative;
-  width: 100vw;
   height: 100%;
   justify-content: center;
   align-items: center;
@@ -43,11 +69,24 @@ aside li {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 50px;
+  gap: 80px;
+  margin-top: 40px;
 }
 
 .tag-container p{
+  transition: 0.5s;
+  border-radius: 6px;
+  width: 100px;
+  height: 40px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
+}
+
+.tag-container p:hover {
+  background: #1f2a30;
 }
 
 nav label {
@@ -57,28 +96,52 @@ nav label {
 }
 
 nav label input {
-  outline: none;
   border: none;
   color: #ffff;
-  background: #2a718d;
+  background: #1f2a30;
   width: 70vw;
-  padding-left: 100px;
+  border-radius: 6px;
+  padding-left: 50px;
   height: 50px;
-  box-shadow: #000000 2px 3px 4px;
+}
+
+nav label input:focus {
+  outline: solid 1px #345769;
+}
+
+@keyframes card-animation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+
+}
+
+@keyframes card-animation-close {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
 
 .movies-container {
-  margin-top: 50px;
+  width: 80vw;
+  margin-top: 30px;
   display: flex;
   justify-content: center;
   align-items: flex;
   flex-wrap: wrap;
   gap: 50px;
+  transition: 0.3s;
+  animation-name: card-animation;
+  animation-duration: 1s;
 }
 
 .card {
-  opacity: 0;
-  transition: 5.5s;
   cursor: pointer;
 }
 
@@ -102,7 +165,7 @@ nav label input {
   text-align: start;
   width: 250px;
   min-width: 200px;
-  background: #19262b;
+  background: none;
   font-weight: 500;
   height: 50px;
 }
@@ -116,25 +179,50 @@ nav label input {
 
 #aside-movie {
   position: fixed;
+  display: flex;
+  flex-direction: column;
   right: 0;
   transform: translateX(100%);
-  background: #161f2e;
   height: 100vh;
+  background: #192227;
   transition: 0.3s;
   width: 500px;
 }
 
-#aside-movie #close-button {
-  margin: 20px;
+.aside-info {
+  position: absolute;
+  width: 500px;
+}
+
+.aside-info img {
+  width: 500px;
   background: none;
+}
+
+.aside-info .card-title {
+}
+
+#aside-movie #close-button {
+  margin: 5px;
+  height: 40px;
+  width: 40px;
+  position: absolute;
   cursor: pointer;
+}
+
+.buttons-container {
+  display: flex;
+  align-self: flex-end;
+  width: 500px;
+  height: 50px;
+  background: #141a1d;
 }
 
 .btn-group {
 }
 
 .page-container {
+  display: none;
   margin: 80px 0 80px 0px;
-  display: flex;
   justify-content: center;
 }
