--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 }
 
 .app {
+  overflow-x: hidden;
   display: flex;
   width: 100vw;
 }
@@ -178,6 +179,8 @@ nav label input:focus {
   justify-content: space-between;
 }
 
+/* Aside */
+
 #aside-movie {
   position: fixed;
   display: flex;
@@ -190,23 +193,18 @@ nav label input:focus {
   width: 500px;
 }
 
-#aside-movie .btn-group {
-  margin-top: 200px;
-}
-
 .aside-info {
-  position: absolute;
   width: 500px;
   height: 100vh;
 }
 
 .aside-info .card-body {
-  gap: 20px;
+  gap: 30px;
   width: 500px;
-  display: flex;
   height: 100vh;
+  display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-direction: column;
   text-align: center;
 }
@@ -229,6 +227,7 @@ nav label input:focus {
   display: flex;
   max-width: 450px;
   text-align: center;
+  height: 100vh;
   justify-content: space-around;
   align-items: center;
 }
@@ -253,19 +252,22 @@ nav label input:focus {
   cursor: pointer;
 }
 
-.buttons-container {
-  display: flex;
-  align-self: flex-end;
-  width: 500px;
-  height: 50px;
-  background: #141a1d;
-}
-
-.btn-group {
-}
-
 .page-container {
-  display: none;
   margin: 80px 0 80px 0px;
   justify-content: center;
+  align-items: center;
+  align-self: center;
+}
+
+#aside-movie .btn-group {
+  width: 500px;
+  align-self: flex-end;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.btn-group button {
+  border: none;
+  background: #1f2a30;
+  border-radius: 0;
 }
