--- a/css/style.css
+++ b/css/style.css
@@ -201,10 +201,9 @@ nav label input:focus {
 .aside-info .card-body {
   gap: 30px;
   width: 500px;
-  height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
   text-align: center;
 }
@@ -227,7 +226,6 @@ nav label input:focus {
   display: flex;
   max-width: 450px;
   text-align: center;
-  height: 100vh;
   justify-content: space-around;
   align-items: center;
 }
@@ -240,6 +238,7 @@ nav label input:focus {
 }
 
 .aside-info .card-body p {
+  min-height: 140px;
   font-size: 1rem;
   max-width: 450px;
 }
@@ -252,22 +251,50 @@ nav label input:focus {
   cursor: pointer;
 }
 
-.page-container {
-  margin: 80px 0 80px 0px;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
+#aside-movie .buttons-container {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  align-self: flex-end;
+  position: absolute;
+  height: 95vh;
+  background: none;
 }
 
 #aside-movie .btn-group {
-  width: 500px;
-  align-self: flex-end;
   display: flex;
+  align-items: flex-end;
   justify-content: flex-end;
+  align-self: flex-end;
+  width: 500px;
 }
 
 .btn-group button {
   border: none;
   background: #1f2a30;
   border-radius: 0;
+}
+
+.page-container {
+  transition: 2.3s;
+  opacity: 0;
+  margin: 80px 0 80px 0px;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+}
+
+.page-container .btn-group {
+  gap: 5px;
+}
+
+.page-container .btn-group a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  width: 60px;
+  border: none;
+  background: #345769;
+  border-radius: 16;
 }
