--- a/css/style.css
+++ b/css/style.css
@@ -48,16 +48,15 @@ aside #close-button-aside {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 70vh;
 }
 
 .aside-links img {
-  height: 30px;
+  height: 20px;
 }
 
 .aside-links ul {
-  gap: 5px;
   padding: 0;
+  margin-top: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -71,11 +70,12 @@ aside #close-button-aside {
   justify-content: center;
   align-items: center;
   background: none;
-  height: 50px;
+  height: 40px;
   width: 110px;
 }
 
 .link {
+  min-height: 30px;
   background: none;
   width: 200px;
   display: flex;
@@ -226,13 +226,12 @@ nav label input:focus {
 }
 
 .aside-info .card-body {
-  gap: 30px;
   width: 500px;
   max-width: 500px;
   height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: flex;
   flex-direction: column;
   text-align: center;
 }
@@ -248,12 +247,14 @@ nav label input:focus {
   justify-content: space-around;
   max-width: 450px;
   gap: 10px;
+  min-height: 50px;
 }
 
 .aside-info .movie-info {
   gap: 30px;
   display: flex;
   max-width: 450px;
+  min-height: 50px;
   text-align: center;
   justify-content: space-around;
   align-items: center;
@@ -264,14 +265,11 @@ nav label input:focus {
   overflow: hidden;
   display: flex;
   justify-content: space-around;
-  width: 400px;
+  width: 450px;
   align-items: center;
 }
 
 .aside-info .card-body p {
-  overflow: hidden;
-  min-height: 140px;
-  font-size: 1rem;
   max-width: 450px;
 }
 
@@ -369,5 +367,47 @@ nav label input:focus {
   }
   #aside-movie .btn-group {
     width: 100vw;
+  }
+}
+
+@media screen and (max-height: 700px) {
+  #aside-movie .btn-group button {
+    height: 50px;
+  }
+
+  .card-body {
+    margin: 0;
+  }
+
+  .aside-info .card-body p {
+    font-size: 0.8rem;
+  }
+
+  .aside-info .card-body .overview {
+    overflow: hidden;
+    padding: 0px 0px 30px 0px;
+  }
+
+  .aside-info .card-body #movie-info p {
+    min-height: 20px;
+    margin-top: 20px;
+    position: relative;
+  }
+  
+  .card-body .card-title  {
+    min-height: 35px;
+   
+  }
+  
+  .card-body .card-title h4 {
+    font-size: 1.2rem;
+  }
+ 
+  .card-body h6 {
+    font-size: 0.8rem;
+  }
+
+  .aside-info .card-body {
+    height: 80vh;
   }
 }
