--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,11 @@
 }
 
 #menu-hamburguer {
-  display: flex;
+  margin: 20px;
+  left: 0px;
   transition: 0.6s;
   height: 40px;
   cursor: pointer;
-  margin: 20px;
 }
 
 aside {
@@ -91,7 +91,6 @@ aside #close-button-aside {
 
 .main {
   transition: 0.3s;
-  position: relative;
   width: 100vw;
   height: 100vh;
   justify-content: center;
@@ -123,10 +122,20 @@ aside #close-button-aside {
   background: #1f2a30;
 }
 
+nav {
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  display: flex;
+}
+
 nav label {
+  background: none;
   margin-top: 20px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 nav label input {
@@ -300,9 +309,9 @@ nav label input:focus {
 }
 
 .page-container {
-  transition: 2.3s;
-  opacity: 0;
-  margin: 80px 0 80px 0px;
+  display: flex;
+  transition: 1.3s;
+  margin: 40px 0 40px 0px;
   justify-content: center;
   align-items: center;
   align-self: center;
@@ -324,6 +333,31 @@ nav label input:focus {
 }
 
 @media screen and (max-width: 600px) {
+  .movies-container {
+    gap: 40px;
+  }
+  
+  .card img {
+    max-width: 200px;
+    max-height: 350px;
+  }
+  
+  .img-container img:hover {
+    opacity: 0.4;
+  }
+  
+  .card-body h6 {
+    min-height: 20px;
+    color: #ffff;
+    font-weight: 500;
+  }
+  
+  .card-body {
+    gap: 10px;
+    max-width: 200px;
+    min-width: 200px;
+  }
+  
   .tag-container {
     gap: 10px;
   }
